--- a/css7/2.html
+++ b/css7/2.html
@@ -26,7 +26,7 @@
         position: sticky;
         top:0;
         height: .88rem;
-        background: #29BDE0;
+        background:  #29BDE0;
         line-height: .88rem;
         text-align: center;
         font-size: .34rem;
@@ -35,7 +35,6 @@
         color: #FFFFFF;
     }
     .left-header-box{
-        display:inline-block;
         float: left;
         position: relative;
         top:50%;
@@ -48,7 +47,6 @@
         width: .3rem;
         margin:.09rem auto;
         border:.01rem solid#FFFFFF;
-        text-align:center;
     }
     .left-header{
         float: right;
@@ -100,7 +98,6 @@
     }
     /* 三角形 */
     .font::before{
-        display: inline-block;
         float: left;
         content: "";
         margin: -.24rem 0  0  -.01rem;
@@ -111,19 +108,17 @@
     .center-box{
         display: flex;
         justify-content: space-around;
-        height: 1.4rem;
-        margin-bottom: .74rem;
     }
 
     /* 下拉框 */
     .dropdown{
-        width: 1.26rem;
-        height:1.26rem;
+        width: 20vw;
+        height: 20vw;
+        margin-bottom:8.3vw;
         border: .05rem solid #FFFFFF;
         background: #F5C97B;
     }
     .role{
-        display: block;
         display:flex;
         align-items: center;
         justify-content: center;
@@ -132,7 +127,6 @@
         color: #565656;
     }
     .number{
-        display: block;
         display:flex;
         align-items: center;
         justify-content: center;
@@ -145,38 +139,32 @@
     /* 下拉框内容 */
     .dropdown-content {
         display: none;
-        width: 100%;
+        margin-top:2vw;
     }
     .dropdown:hover .dropdown-content {
-        display: inline-block; 
+        display: flex;
+        justify-content: space-between;
     }
     .killer{
-        display: inline-block;
-        width: .3rem;
-        height: .3rem;
-        margin: .34rem .07rem 0 0;
-        background: url(task-css7.png) no-repeat -2.2rem 0;
+        width: 4.5vw;
+        height:4.5vw;
+        background: url(task2-css7.png) no-repeat 0 0/100%;
+        
     }
     .judge{
-        display: inline-block;
-        width: .3rem;
-        height: .3rem;
-        margin-left: -.15rem;
-        background: url(task-css7.png) no-repeat -1.04rem -1rem;
+        width: 4.5vw;
+        height:4.5vw;
+        background: url(task2-css7.png) no-repeat 0 30%/100%;
     }
     .sniper{
-        display: inline-block;
-        width: .3rem;
-        height: .3rem;
-        margin-left: -.07rem;
-        background: url(task-css7.png) no-repeat 0 -1rem;
+        width: 4.5vw;
+        height:4.5vw;
+        background: url(task2-css7.png) no-repeat 0 67%/100%;
     }
     .doctor{
-        display: inline-block;
-        width: .3rem;
-        height: .3rem;
-        margin-left: -.08rem;
-        background: url(task-css7.png) no-repeat -1.02rem 0;
+        width: 4.5vw;
+        height:4.5vw;
+        background: url(task2-css7.png) no-repeat 0 100%/100%;
     }
 
     /* footer页尾 */
@@ -190,7 +178,7 @@
         text-align: center;
     }
     .button-box{
-        width: 50%;
+        width: 75%;
         height: .87rem;
         border:none;
         background: #FBB435;
@@ -200,15 +188,11 @@
         letter-spacing: .15rem;
         color: #FFFFFF;
     }
-    .a{
-        width: 0;
-        height: 0;
-    }
     </style>
 </head>
 <body>
     <header>
-        <a href="1.html">
+        <a href="css7-1.html">
             <ul class="left-header-box">
                 <li class="left-header-content"></li>
                 <li class="left-header-content"></li>
@@ -216,12 +200,14 @@
             </ul>
         </a>
         <span>投票</span>
-        <a href="3.html" class="left-header"></a>
+        <a href="css7-3.html" class="left-header"></a>
     </header>
     <main>
         <div class="top-box">
             <p class="left-font">发言讨论结束，大家请投票</p>
-            <button type="button" class="right-circle"></button>
+            <button type="button" class="right-circle">
+
+            </button>
         </div>
         <p class="font">点击得票数最多人的头像</p>
         <ul>
@@ -356,7 +342,7 @@
         </ul>
     </main>
     <footer>
-        <button class="button-box" type="button"  onclick="location.href='3.html'">投死</button>
+        <button class="button-box" type="button" onclick="location.href='css7-3.html'">投死</button>
     </footer>
 </body>
 </html>
