--- a/css7/css7-1.html
+++ b/css7/css7-1.html
@@ -27,8 +27,8 @@
                 <a href="css7-2.html" class="content-box">简化版</a>
             </li>
             <li class="font">有1133个用户正在玩此游戏</li>
-            <li class="sjx">
-                <a href="css7-2.html" class="content-box">猜词版</a>
+            <li>
+                <a href="css7-2.html" class="content-box sjx">猜词版</a>
             </li>
             <li class="font">有1133个用户正在玩此游戏</li>
             <li>
