--- a/css7/css7-2.html
+++ b/css7/css7-2.html
@@ -5,193 +5,7 @@
     <meta name="viewport" content="width=device-width; initial-scale=1.0;minimum-scale=1.0; 
     maximum-scale=1.0; user-scalable=no;">
     <title>投票</title>
-    <style pyte="txet/css">
-    html{
-        font-size: 312.5%;
-    }
-    body{
-        padding-bottom: 1.6rem;
-        background: #29BDE0;
-        font-size: initial;
-        margin: 0;
-    }
-    p,ul,li{
-        padding: 0;
-        margin: 0;
-        list-style: none;
-    }
-
-    /* header眉页 */
-    header{
-        position: sticky;
-        top:0;
-        height: .88rem;
-        line-height: .88rem;
-        text-align: center;
-        font-size: .34rem;
-        /* 字符间距 */
-        letter-spacing: .15rem;
-        color: #FFFFFF;
-    }
-    .left-header-box{
-        float: left;
-        position: relative;
-        top:50%;
-        width: .39rem;
-        height: .4rem;
-        margin:-.2rem 0 0 .23rem;
-        border:.01rem solid#FFFFFF;
-    }
-    .left-header-content{
-        width: .3rem;
-        margin:.09rem auto;
-        border:.01rem solid#FFFFFF;
-    }
-    .left-header{
-        float: right;
-        position: relative;
-        top: 50%;
-        width: .36rem;
-        height: .36rem;
-        margin :-.18rem .23rem 0 0;
-        background: url(task-css7.png) no-repeat -2.24rem -.96rem;
-    }
-
-    /* main主体 */
-    .top-box{
-        display: flex;
-        justify-content:space-between;
-        align-items: center;
-        height: .82rem;
-        background:#b9e9f5;
-        
-    }
-    .left-font{
-        margin-left: .46rem;
-        font-size: .26rem;
-        color: #464646;
-    }
-    .right-circle{
-        width: .52rem;
-        height: .52rem;
-        border-radius: 100%;
-        border: none;
-        margin-right: .17rem;
-        background: #FBB435;
-        outline: none;
-    }
-
-    /* 三角形 */
-    .right-circle::after{
-        display: inline-block;
-        content: "";
-        margin: .05rem 0 0 .05rem;
-        border-top: .15rem solid transparent;
-        border-left: .3rem solid #FFFFFF;
-        border-bottom: .15rem solid transparent;
-    }
-    .font{
-        margin: .24rem 0 .43rem .72rem;
-        font-size: .24rem;
-        color: #FFFFFF;
-    }
-    /* 三角形 */
-    .font::before{
-        float: left;
-        content: "";
-        margin: -.24rem 0  0  -.01rem;
-        border-top: .14rem solid #b9e9f5;
-        border-left: .07rem solid transparent;
-        border-right: .07rem solid transparent;
-    }
-    .center-box{
-        display: flex;
-        justify-content: space-around;
-        height: 1.4rem;
-        margin-bottom: .74rem;
-    }
-
-    /* 下拉框 */
-    .dropdown{
-        width: 1.26rem;
-        height:1.26rem;
-        border: .05rem solid #FFFFFF;
-        background: #F5C97B;
-    }
-    .role{
-        display:flex;
-        align-items: center;
-        justify-content: center;
-        height: 75%;
-        font-size: .3rem;
-        color: #565656;
-    }
-    .number{
-        display:flex;
-        justify-content: center;
-        background:rgba(26,153,183,.5);
-        font-size: .23rem;
-        color: #FFFFFF;
-    }
-
-    /* 下拉框内容 */
-    .dropdown-content {
-        display: none;
-    }
-    .dropdown:hover .dropdown-content {
-        display: inline-block; 
-    }
-    .killer{
-        display: inline-block;
-        width: .3rem;
-        height: .3rem;
-        margin: .34rem .07rem 0 0;
-        background: url(task-css7.png) no-repeat -2.2rem 0;
-    }
-    .judge{
-        display: inline-block;
-        width: .3rem;
-        height: .3rem;
-        margin-left: -.15rem;
-        background: url(task-css7.png) no-repeat -1.04rem -1rem;
-    }
-    .sniper{
-        display: inline-block;
-        width: .3rem;
-        height: .3rem;
-        margin-left: -.07rem;
-        background: url(task-css7.png) no-repeat 0 -1rem;
-    }
-    .doctor{
-        display: inline-block;
-        width: .3rem;
-        height: .3rem;
-        margin-left: -.08rem;
-        background: url(task-css7.png) no-repeat -1.02rem 0;
-    }
-
-    /* footer页尾 */
-    footer{
-        position: fixed;
-        bottom: 0;
-        width: 100%;
-        height: 1.8rem;
-        background: #29BDE0;
-        line-height: 1.9rem;
-        text-align: center;
-    }
-    .button-box{
-        width: 75%;
-        height: .87rem;
-        border:none;
-        background: #FBB435;
-        outline: none;
-        font-size: .4rem;
-        /* 字符间距 */
-        letter-spacing: .15rem;
-        color: #FFFFFF;
-    }
-    </style>
+    <link rel="stylesheet" type="text/css" href="css7-2.css">
 </head>
 <body>
     <header>
@@ -209,7 +23,7 @@
         <div class="top-box">
             <p class="left-font">发言讨论结束，大家请投票</p>
             <button type="button" class="right-circle">
-                
+
             </button>
         </div>
         <p class="font">点击得票数最多人的头像</p>
