--- a/css7/css7-2.html
+++ b/css7/css7-2.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <header>
+
         <a href="css7-1.html">
             <ul class="left-header-box">
                 <li class="left-header-content"></li>
@@ -160,6 +161,9 @@
     </main>
     <footer>
         <button class="button-box" type="button" onclick="location.href='css7-3.html'">投死</button>
+        <audio  autoplay="autoplay">
+            <source src="he is a pirate.mp3" type="audio/mpeg" />
+        </audio>
     </footer>
 </body>
 </html>
