--- a/css7/css7-1.html
+++ b/css7/css7-1.html
@@ -9,41 +9,32 @@
 </head>
 <body>
     <header>
-        <button class="left-box" type="button">
-            <p class="left"></p>
-            <p class="left"></p>
-            <p class="left"></p>
-        </button>
+        <button class="left" type="button"></button>
     </header>
     <main>
-        <div class="main-box">
-            <p class="arrows">上次游戏：捉鬼猜词版</p>
-        </div>
+            <span class="main-top">上次游戏：捉鬼猜词版</span>
+            <ul class="box">
+                    <li class="top-box">捉鬼游戏</li>
+                    <li>
+                        <a href="css7-2.html" class="content-box">简化版</a>
+                    </li>
+                    <li class="font">有1133个用户正在玩此游戏</li>
+                    <li>
+                        <a href="css7-2.html" class="content-box sjx">猜词版</a>
+                    </li>
+                    <li class="font">有1133个用户正在玩此游戏</li>
+                    <li>
+                        <a href="css7-2.html" class="content-box">白痴版</a>
+                    </li>
+                    <li class="font">有1133个用户正在玩此游戏</li>
+                    <li class="bottom-box">
+                            <span class="blue"></span>
+                            <span class="grey"></span>
+                            <span class="grey"></span>
+                            <span class="grey"></span>
+                    </li>
+                </ul>
     </main>
-    <footer>
-        <ul class="footer-box">
-            <li class="top-box">捉鬼游戏</li>
-            <li>
-                <a href="css7-2.html" class="content-box">简化版</a>
-            </li>
-            <li class="font">有1133个用户正在玩此游戏</li>
-            <li>
-                <a href="css7-2.html" class="content-box sjx">猜词版</a>
-            </li>
-            <li class="font">有1133个用户正在玩此游戏</li>
-            <li>
-                <a href="css7-2.html" class="content-box">白痴版</a>
-            </li>
-            <li class="font">有1133个用户正在玩此游戏</li>
-            <li>
-                <div class="bottom-box">
-                    <a class="blue"></a>
-                    <a class="grey"></a>
-                    <a class="grey"></a>
-                    <a class="grey"></a>
-                </div>
-            </li>
-        </ul>
-    </footer>
+    
 </body>
 </html>
