--- a/bootstrap/.html
+++ b/bootstrap/.html
@@ -8,17 +8,26 @@
     <title>Bootstrap 101 Template</title>
 
     <!-- Bootstrap -->
-    <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-    <style pyte="txet/css">
-      .center{
-        width: 100px;
-        height: 100px;
-    }
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
     </style>
 
   </head>
   <body>
-    <button class="alert-warning center" type="button">aa</button>
-
+      <div class="container">
+        <div class="row">
+          <div class="col-md-5">
+            <h1>左侧内容</h1>
+            <p>sed do eiusmod tempor incididunt ut labore et dolore magna          
+              aliqua. Ut enim ad minim veniam, quis nostrud exercitation    
+              ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>        
+          </div>
+          <div class="col-md-7">
+              <h1>右侧内容</h1>
+              <p>sed do eiusmod tempor incididunt ut labore et dolore magna          
+                aliqua. Ut enim ad minim veniam, quis nostrud exercitation    
+                ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          </div>
+        </div>
+      </div>
   </body>
 </html>
