--- a/css7/test1.html
+++ b/css7/test1.html
@@ -6,161 +6,157 @@
     maximum-scale=1.0; user-scalable=no;">
     <title>捉鬼游戏</title>
     <style pyte="txet/css">
-    html{
-        font-size:312.5%;
-    }
-    body{
-        margin: 0;
-        font-size:initial;
-    }
-    p,ul,li{
-        padding: 0;
-        margin: 0;
-        list-style: none;
-    }
+   html{
+    font-size:312.5%;
+}
+body{
+    margin: 0;
+    font-size:initial;
+}
+p{
+    margin: 0;
+}
+ul,li{
+    padding: 0;
+    list-style: none;
+}
 
-    /* header眉页 */
+/* header眉页 */
 
-    header{
-        height:.9rem;
-        background: #29BDE0;
-    }
-    .left-box{
-        width: 1rem;
-        border:none;
-        background: #29BDE0;
-        margin: .3rem 0 0 .22rem;
-        outline:none;
-        
-    }
-    .left{
-        width:.34rem;
-        margin: .08rem;
-        border: .02rem solid #FFFFFF;
-    }
+header{
+    height:.9rem;
+    background: #29BDE0;
+}
 
-    /* main主体 */
-    .main-box{
-        margin: .27rem .36rem;
-        border: solid .01rem #C9C9C9;
-        background: #FFFFFF;
-        line-height: 1.16rem;
-        text-align:center;
-        font-size: .35rem;
-        color: #9A9A9A
-    }
-    .arrows::after{
-        display: inline-block;
-        float: right;
-        content: "";
-        width: .24rem;
-        height:.24rem;
-        margin: .42rem .2rem 0 -.5rem;
-        border-top:.05rem solid #E7E7E7;
-        border-right: .05rem solid #E7E7E7;
-        transform: rotate(45deg);
-    }
+/* 中间的横杆利用padding上下把height内容撑小，再利用background-clip：content-box */
+.left{
+    width: .34rem; 
+    height: .32rem;  
+    padding:.1rem 0;
+    margin: .38rem 0 0 .22rem;
+    border:none;
+    outline:none;
+    border-top: .04rem solid #FFFFFF;  
+    border-bottom: .04rem solid #FFFFFF;   
+    background:#FFFFFF content-box;  
+}
 
-    /* footer尾页 */
-    .footer-box{
-        height: 8rem;
-        margin: 0 .35rem;
-        border: solid .01rem #C9C9C9;
-        background: #FFFFFF;
-        text-align: center;
-    }
-    .top-box{
-        border-bottom: .01rem solid #FBB435;
-        line-height: .9rem;
-        text-align: center;
-        font-size: .38rem;
-        /* 字符间距 */
-        letter-spacing: .03rem;
-        color: #FBB435;
-    }
-    .content-box{
-        display: inline-block;
-        width: 4.63rem;
-        margin-top: .27rem;
-        background: #69D1E9;
-        line-height:1.34rem;
-        font-size:.32rem;
-        letter-spacing: .04rem;
-        text-decoration:none;
-        color: #FFFFFF;
-    }
-    .font{
-        margin-top: .27rem;
-        font-size: .25rem;
-        color: #787878;
-    }
-    .sjx::after{
-        display: inline-block;
-        content: "";
-        float: right;
-        border: solid 0.3rem;
-        border-color:transparent transparent transparent #FBB435;
-        margin: .7rem -.2rem 0 -1rem;
-    }
-    .bottom-box{
-        display:flex;
-        justify-content: space-between;
-        width: .98rem;
-        margin: auto;
-        margin-top: .14rem;
-        text-align: center;
-    }
-    .blue{
-        width: .17rem;
-        height: .17rem;
-        border-radius: 1000%;
-        background: #69D1E9;
-    }
-    .grey{
-        width: .17rem;
-        height: .17rem;
-        border-radius: 1000%;
-        background: #F0F0F0;
-    }
+/* main主体 */
+.main-top{
+    display: block;
+    margin: .27rem .36rem;
+    border: solid .01rem #C9C9C9;
+    background: #FFFFFF;
+    line-height: 1.16rem;
+    text-align:center;
+    font-size: .35rem;
+    color: #9A9A9A
+}
+.main-top::after{
+    display: inline-block;
+    float: right;
+    content: "";
+    width: .24rem;
+    height:.24rem;
+    margin: .42rem .2rem 0 -.5rem;
+    border-top:.05rem solid #E7E7E7;
+    border-right: .05rem solid #E7E7E7;
+    transform: rotate(45deg);
+}
+
+/* footer尾页 */
+.box{
+    position: relative;
+    height: 8rem;
+    margin: 0 .35rem;
+    border: solid .01rem #C9C9C9;
+    background: #FFFFFF;
+    text-align: center;
+}
+.top-box{
+    border-bottom: .01rem solid #FBB435;
+    line-height: .9rem;
+    text-align: center;
+    font-size: .38rem;
+    /* 字符间距 */
+    letter-spacing: .03rem;
+    color: #FBB435;
+}
+.content-box{
+    display: inline-block;
+    width: 80%;
+    margin-top: .27rem;
+    background: #69D1E9;
+    line-height:1.34rem;
+    font-size:.32rem;
+    letter-spacing: .04rem;
+    text-decoration:none;
+    color: #FFFFFF;
+}
+.font{
+    margin-top: .27rem;
+    font-size: .25rem;
+    color: #787878;
+}
+.sjx::after{
+    position: absolute;
+    top: 50%;
+    right: .1rem;
+    content: "";
+    margin: -.3rem -.2rem -3rem 0;
+    border: solid 0.3rem;
+    border-color:transparent transparent transparent #FBB435;
+}
+.bottom-box{
+    display:flex;
+    justify-content: space-between;
+    width: .98rem;
+    margin: auto;
+    margin-top: .14rem;
+    text-align: center;
+}
+.blue{
+    width: .17rem;
+    height: .17rem;
+    border-radius: 1000%;
+    background: #69D1E9;
+}
+.grey{
+    width: .17rem;
+    height: .17rem;
+    border-radius: 1000%;
+    background: #F0F0F0;
+}
     </style>
 </head>
 <body>
-    <header>
-        <button class="left-box" type="button">
-            <p class="left"></p>
-            <p class="left"></p>
-            <p class="left"></p>
-        </button>
-    </header>
-    <main>
-        <div class="main-box">
-            <p class="arrows">上次游戏：捉鬼猜词版</p>
-        </div>
-    </main>
-    <footer>
-        <ul class="footer-box">
-            <li class="top-box">捉鬼游戏</li>
-            <li>
-                <a href="2.html" class="content-box">简化版</a>
-            </li>
-            <li class="font">有1133个用户正在玩此游戏</li>
-            <li class="sjx">
-                <a href="2.html" class="content-box">猜词版</a>
-            </li>
-            <li class="font">有1133个用户正在玩此游戏</li>
-            <li>
-                <a href="2.html" class="content-box">白痴版</a>
-            </li>
-            <li class="font">有1133个用户正在玩此游戏</li>
-            <li>
-                <div class="bottom-box">
-                    <a class="blue"></a>
-                    <a class="grey"></a>
-                    <a class="grey"></a>
-                    <a class="grey"></a>
-                </div>
-            </li>
-        </ul>
-    </footer>
-</body>
+        <header>
+            <button class="left" type="button"></button>
+        </header>
+        <main>
+            <span class="main-top">上次游戏：捉鬼猜词版</span>
+            <ul class="box">
+                <li class="top-box">捉鬼游戏</li>
+                <li>
+                    <a href="css7-2.html" class="content-box">简化版</a>
+                </li>
+                <li class="font">有1133个用户正在玩此游戏</li>
+                <li>
+                    <a href="css7-2.html" class="content-box sjx">猜词版</a>
+                </li>
+                <li class="font">有1133个用户正在玩此游戏</li>
+                <li>
+                    <a href="css7-2.html" class="content-box">白痴版</a>
+                </li>
+                <li class="font">有1133个用户正在玩此游戏</li>
+                <li class="bottom-box">
+                    <span class="blue"></span>
+                    <span class="grey"></span>
+                    <span class="grey"></span>
+                    <span class="grey"></span>
+                </li>
+            </ul>
+        </main>
+        
+    </body>
 </html>
