--- a/bootstrap/.html
+++ b/bootstrap/.html
@@ -15,17 +15,47 @@
   <body>
       <div class="container">
         <div class="row">
-          <div class="col-md-5">
+          <div class="col-md-4 offset-5">
             <h1>左侧内容</h1>
             <p>sed do eiusmod tempor incididunt ut labore et dolore magna          
               aliqua. Ut enim ad minim veniam, quis nostrud exercitation    
               ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>        
           </div>
-          <div class="col-md-7">
+          <div class="col-md-2 ">
               <h1>右侧内容</h1>
               <p>sed do eiusmod tempor incididunt ut labore et dolore magna          
                 aliqua. Ut enim ad minim veniam, quis nostrud exercitation    
                 ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <div class="container">
+                  <div class="row">
+                    <div class="col-md-4">
+                      <h3>套嵌内容1</h3>
+                      <p>sed do eiusmod tempor incididunt ut labore et dolore magna          
+                        aliqua.Ut enim ad minim veniam, quis nostrud exercitation    
+                        ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+                    </div>
+                    <div class="col-md-4">
+                      <h3>套嵌内容2</h3>
+                      <p>sed do eiusmod tempor incididunt ut labore et dolore magna          
+                        aliqua. </p>
+                    </div>
+                    <div class="col-md-4">
+                      <h3>套嵌内容3</h3>
+                      <p>sed do eiusmod tempor incididunt ut labore et dolore magna          
+                        aliqua. </p>
+                      </div>
+                      <div class="col-md-4">
+                          <h3>套嵌内容4</h3>
+                          <p>sed do eiusmod tempor incididunt ut labore et dolore magna          
+                            aliqua.</p>
+                          </div>
+                          <div class="col-md-4">
+                              <h3>套嵌内容5</h3>
+                              <p>sed do eiusmod tempor incididunt ut labore et dolore magna          
+                                aliqua.</p>
+                              </div>
+                </div>
+              </div>
           </div>
         </div>
       </div>
