--- a/css7/css7-3.html
+++ b/css7/css7-3.html
@@ -36,20 +36,17 @@
                     <span class="left">第1天</span>
                     <span class="right">0小时07分</span>
                 </div>
-                <div class="bottom-content">
-                    <p>晚上：5号被杀手杀死，5号是水民</p>
-                    <p>白天：8号被全民投票投死，8号是杀手</p>
-                </div>
+                <p class="night">晚上：5号被杀手杀死，5号是水民</p>
+                <p class="daytime">白天：8号被全民投票投死，8号是杀手</p>
+                
             </li>
             <li class="bottom-box">
                 <div class="bottom-headline">
                     <span class="left">第2天</span>
                     <span class="right">0小时07分</span>                   
-                </div>                   
-                <div class="bottom-content">                       
-                    <p>晚上：1号被杀手杀死，1号是水民</p>                       
-                    <p>白天：2号被全民投票投死，2号是杀手</p>                  
-                </div>               
+                </div>                                       
+                <p class="night">晚上：1号被杀手杀死，1号是水民</p>                       
+                <p class="daytime">白天：2号被全民投票投死，2号是杀手</p>                               
             </li>
             <li>
                 <div class="bottom">
