--- a/css8/css8-1.html
+++ b/css8/css8-1.html
@@ -4,11 +4,107 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>首页</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
     <style pyte="txet/css">
+    html{
+        font-size: 312.5%;
+    }
+    body{
+        font-size: initial;
+    }
+
+    /* header眉页 */
+    .header-top{
+        display: flex;
+        justify-content:space-around;
+        height:.39rem;
+        background: #FFFFFF;
+    }
+    .right-box{
+        width: 1.5rem;
+    }
+    .service{
+        font-size: .14rem;
+        color: #29B078;
+    }
+    .weixin{
+        display: inline-block;
+        width: .3rem;
+        height: .3rem;
+        margin-right: .19rem;
+        background: url(picture/task-css8.png) no-repeat 0 0;
+    }
+    .qq{
+        display: inline-block;
+        width: .3rem;
+        height: .3rem;
+        margin-right: .19rem;
+        background: url(picture/task-css8.png) no-repeat 0 -.58rem;
+    }
+    .weibo{
+        display: inline-block;
+        width: .3rem;
+        height: .3rem;
+        background: url(picture/task-css8.png) no-repeat 0 -1.3rem;
+    }
+
+    /* 导航栏 */
+    .navbar-nav{
+        height: 1.2rem;
+        background: #29B078;
+        line-height: .1rem;
+    }
+    .nav-link{
+        font-size: .16rem;
+        /* 字符间距 */
+        letter-spacing: .05rem;
+        color: #FFFFFF !important;
+    }
+
     </style>
 </head>
 <body>
+    <header>
+        <div class="header-top">
+            <span class="service">客服热线：010-594-78634</span>
+            <div class="right-box">
+                <span class="weixin"></span>
+                <span class="qq"></span>
+                <span class="weibo"></span>
+            </div>
+        </div>
+        <nav class="navbar navbar-expand-md bg-dark navbar-dark">  
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                  <ul class="navbar-nav">
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">Link</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">Link</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">Link</a>
+                    </li>    
+                  </ul>
+                </div>  
+              </nav>
+    </header>
 
+
+
+
+
+
+
+
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
 </body>
 </html>
+
