--- a/css7/css7-2.html
+++ b/css7/css7-2.html
@@ -9,16 +9,13 @@
 </head>
 <body>
     <header>
-
-        <a href="css7-1.html">
-            <ul class="left-header-box">
-                <li class="left-header-content"></li>
-                <li class="left-header-content"></li>
-                <li class="left-header-content"></li>
-            </ul>
-        </a>
+            <div class="left-header-box">
+                <button class="left-header-content" type="button"></button>
+            </div>
         <span>投票</span>
-        <a href="css7-3.html" class="left-header"></a>
+        <div class="right-box">
+            <a  class="right-content"></a>
+        </div>
     </header>
     <main>
         <div class="top-box">
@@ -28,10 +25,9 @@
             </button>
         </div>
         <p class="font">点击得票数最多人的头像</p>
-        <ul>
-            <li class="center-box">
-                <nav class="dropdown">
-                    <spam class="role">水民</spam>
+            <div class="center-box">
+                <div class="dropdown">
+                    <span class="role">水民</span>
                     <span class="number">1号</span>
                     <ul class="dropdown-content">
                         <li class="killer"></li>
@@ -39,9 +35,9 @@
                         <li class="sniper"></li>
                         <li class="doctor"></li>
                     </ul>
-                </nav>
-                <nav class="dropdown">
-                    <spam class="role">水民</spam>
+                </div>
+                <div class="dropdown">
+                    <span class="role">水民</span>
                     <span class="number">2号</span>
                     <ul class="dropdown-content">
                         <li class="killer"></li>
@@ -49,9 +45,9 @@
                         <li class="sniper"></li>
                         <li class="doctor"></li>
                     </ul>
-                </nav>
-                <nav class="dropdown">
-                    <spam class="role">警察</spam>
+                </div>
+                <div class="dropdown">
+                    <span class="role">警察</span>
                     <span class="number">3号</span>
                     <ul class="dropdown-content">
                         <li class="killer"></li>
@@ -59,10 +55,8 @@
                         <li class="sniper"></li>
                         <li class="doctor"></li>
                     </ul>
-                </nav>
-            </li>
-            <li class="center-box">
-                <nav class="dropdown">
+                </div>
+                <div class="dropdown">
                     <spam class="role">法官</spam>
                     <span class="number">4号</span>
                     <ul class="dropdown-content">
@@ -71,8 +65,8 @@
                         <li class="sniper"></li>
                         <li class="doctor"></li>
                     </ul>
-                </nav>
-                <nav class="dropdown">
+                </div>
+                <div class="dropdown">
                     <spam class="role">狙击手</spam>
                     <span class="number">5号</span>
                     <ul class="dropdown-content">
@@ -81,8 +75,8 @@
                         <li class="sniper"></li>
                         <li class="doctor"></li>
                     </ul>
-                </nav>
-                <nav class="dropdown">
+                </div>
+                <div class="dropdown">
                     <spam class="role">医生</spam>
                     <span class="number">6号</span>
                     <ul class="dropdown-content">
@@ -91,10 +85,8 @@
                         <li class="sniper"></li>
                         <li class="doctor"></li>
                     </ul>
-                </nav>
-            </li>
-            <li class="center-box">
-                <nav class="dropdown">
+                </div>
+                <div class="dropdown">
                     <spam class="role">杀手</spam>
                     <span class="number">7号</span>
                     <ul class="dropdown-content">
@@ -103,8 +95,8 @@
                         <li class="sniper"></li>
                         <li class="doctor"></li>
                     </ul>
-                </nav>
-                <nav class="dropdown">
+                </div>
+                <div class="dropdown">
                     <spam class="role">水民</spam>
                     <span class="number">8号</span>
                     <ul class="dropdown-content">
@@ -113,8 +105,8 @@
                         <li class="sniper"></li>
                         <li class="doctor"></li>
                     </ul>
-                </nav>
-                <nav class="dropdown">
+                </div>
+                <div class="dropdown">
                     <spam class="role">水民</spam>
                     <span class="number">9号</span>
                     <ul class="dropdown-content">
@@ -123,10 +115,8 @@
                         <li class="sniper"></li>
                         <li class="doctor"></li>
                     </ul>
-                </nav>
-            </li>
-            <li class="center-box">
-                <nav class="dropdown">
+                </div>
+                <div class="dropdown">
                     <spam class="role">医生</spam>
                     <span class="number">10号</span>
                     <ul class="dropdown-content">
@@ -135,8 +125,8 @@
                         <li class="sniper"></li>
                         <li class="doctor"></li>
                     </ul>
-                </nav>
-                <nav class="dropdown">
+                </div>
+                <div class="dropdown">
                     <spam class="role">狙击手</spam>
                     <span class="number">11号</span>
                     <ul class="dropdown-content">
@@ -145,8 +135,8 @@
                         <li class="sniper"></li>
                         <li class="doctor"></li>
                     </ul>
-                </nav>
-                <nav class="dropdown">
+                </div>
+                <div class="dropdown">
                     <spam class="role">警察</spam>
                     <span class="number">12号</span>
                     <ul class="dropdown-content">
@@ -155,9 +145,8 @@
                         <li class="sniper"></li>
                         <li class="doctor"></li>
                     </ul>
-                </nav>
-            </li>
-        </ul>
+                </div>
+            </div>
     </main>
     <footer>
         <button class="button-box" type="button" onclick="location.href='css7-3.html'">投死</button>
