--- a/css7/css7-3.html
+++ b/css7/css7-3.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <header>
-        <span class="left-header right-header">游戏结果</span>
+        <a class="left-header"></a>
+        <span>游戏结果</span>
+        <a class="right-header"></a>
     </header>
     <main>
         <div class="main-box">
