--- a/css8/css8-1.html
+++ b/css8/css8-1.html
@@ -25,38 +25,38 @@
                 </div>
             </div>
         </div> 
+        <!-- 导航栏 -->
         <div class="bg-green">
         <div class="container">
             <div class="row">
                 <div class="col-sm-12">
-                        <nav class="navbar navbar-expand-md bg-green navbar-dark">
-                                <a class="navbar-brand" href="#">
-                                    <img class="xiuzhenyuan" src="picture/xiuzhenyuan.png">
-                                </a>
-                                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-                                    <span class="navbar-toggler-icon"></span>
-                                </button>
-                                <div class="collapse navbar-collapse" id="collapsibleNavbar">
-                                    <ul class="navbar-nav">
-                                        <li class="nav-item">                      
-                                            <a class="nav-link" href="#">首页</a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a class="nav-link" href="#">职业</a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a class="nav-link" href="#">推荐</a>
-                                        </li>    
-                                        <li class="nav-item">
-                                            <a class="nav-link" href="#">关于</a>
-                                        </li>
-                                    </ul>
-                                </div>  
-                            </nav>
+                    <nav class="navbar navbar-expand-md bg-green navbar-dark">
+                        <a class="navbar-brand" href="#">
+                            <img class="xiuzhenyuan" src="picture/xiuzhenyuan.png">
+                        </a>
+                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                            <ul class="navbar-nav">
+                                <li class="nav-item">                      
+                                    <a class="nav-link" href="#">首页</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">职业</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">推荐</a>
+                                </li>    
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">关于</a>
+                                </li>
+                            </ul>
+                        </div>  
+                    </nav>
                 </div>
             </div>
         </div>
-       </div>
     </header>
     <mian>
         <div id="demo" class="carousel slide" data-ride="carousel">
@@ -89,15 +89,141 @@
               <span class="carousel-control-next-icon"></span>
             </a>
            
-          </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-3 top-content content">
+                    <span class="huojian"></span>
+                    <h6>高效</h6>
+                    <p class="synopsis left">将五到七年的成长时间，缩短 到一年到三年。</p>
+                </div>
+                <div class="col-sm-3 top-content content">
+                    <span class="book"></span>
+                    <h6>规范</h6>
+                    <p class="synopsis left center">标准的实战教程，不会走弯路</p>
+                </div>
+                <div class="col-sm-3 top-content content">
+                    <span class="person"></span>
+                    <h6>人脉</h6>
+                    <p class="synopsis left">同班好友，同院学长，技术大师， 入学就混入职脉圈，为以后铺平 道路。</p>
+                </div>
+                <div class="col-sm-3 top-content content">
+                    <span class="long"></span>                    
+                    <h6 class="digit">12400</h6>
+                    <p class="synopsis">累计在线学习人数</p>
+                    <h6 class="bottom-digit">12400</h6>
+                    <p class="synopsis">学员已经找到满意工作</p>
+                </div>
+
+            </div>
+        </div>
+        <h5>如何学习</h5>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3 box">
+                    <div class="circle">
+                        <span class="circle-content">1</span>
+                    </div>
+                    <p class="font">匹配你现在的个人情况 寻找适合自己的岗位</p>
+                    <span class="arrows"></span>
+                </div>
+                <div class="col-md-3 box">
+                    <div class="circle">
+                        <span class="circle-content">2</span>
+                    </div>
+                    <p class="font">了解职业前景薪金待遇、 竞争压力等</p>
+                    <span class="arrows"></span>
+                </div>
+                <div class="col-md-3 box">
+                    <div class="circle">
+                        <span class="circle-content">3</span>
+                    </div>
+                    <p class="font font-right">掌握行业内顶级技能</p>
+                    <span class="arrows"></span>
+                </div>
+                <div class="col-md-3 box">              
+                    <div class="circle">
+                        <span class="circle-content">4</span>
+                    </div>
+                    <p class="font font-right">查看职业目标任务</p>
+                    <span class="arrows"></span>
+                </div>
+            </div>
+        </div>
+        <div class="container distance">
+            <dib class="row">
+                <div class="col-md-3 box">
+                    <div class="circle">
+                        <span class="circle-content">5</span>
+                    </div>
+                    <p class="font">参考学习资源，掌握 技能点，逐个完成任务</p>
+                    <span class="arrows"></span>
+                </div>
+                <div class="col-md-3 box">
+                    <div class="circle">
+                        <span class="circle-content">6</span>
+                    </div>
+                    <p class="font">加入班级，和小伙伴们 互帮互助，一块学习</p>
+                    <span class="arrows"></span>
+                </div>
+                <div class="col-md-3 box">
+                    <div class="circle">
+                        <span class="circle-content">7</span>
+                    </div>
+                    <p class="font">选择导师，一路引导， 加速自己成长</p>
+                    <span class="arrows"></span>
+                </div>
+                <div class="col-md-3 box">
+                    <div class="circle">
+                        <span class="circle-content">8</span>
+                    </div>
+                    <p class="font">完成职业技能，升级业界大牛</p>
+                    <span class="arrows"></span>
+                </div>
+            </dib>
+        </div>
+        <h5>优秀学员展示</h5>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-3">
+                    <div class="student-box">
+                        <a href="#">
+                            <img class="portrait" src="picture/task12-css8.png">
+                        </a>
+                        <h4>技术顾问：罗大佑</h4>
+                        <p class="show">百度技术总监：互联网基础 服务领域，从事虚拟主机、 云服务器、域名。曾任新网 高级技术经理，负责技术研 发、团队管理与建设。</p>
+                    </div>
+                </div>
+                <div class="col-sm-3">
+                        <div class="student-box">
+                            <a href="#">
+                                <img class="portrait" src="picture/task12-css8.png">
+                            </a>
+                            <h4>技术顾问：罗大佑</h4>
+                            <p class="show">百度技术总监：互联网基础 服务领域，从事虚拟主机、 云服务器、域名。曾任新网 高级技术经理，负责技术研 发、团队管理与建设。</p>
+                        </div>
+                    </div>
+                    <div class="col-sm-3">
+                            <div class="student-box">
+                                <a href="#">
+                                    <img class="portrait" src="picture/task12-css8.png">
+                                </a>
+                                <h4>技术顾问：罗大佑</h4>
+                                <p class="show">百度技术总监：互联网基础 服务领域，从事虚拟主机、 云服务器、域名。曾任新网 高级技术经理，负责技术研 发、团队管理与建设。</p>
+                            </div>
+                        </div>
+                        <div class="col-sm-3">
+                                <div class="student-box">
+                                    <a href="#">
+                                        <img class="portrait" src="picture/task12-css8.png">
+                                    </a>
+                                    <h4>技术顾问：罗大佑</h4>
+                                    <p class="show">百度技术总监：互联网基础 服务领域，从事虚拟主机、 云服务器、域名。曾任新网 高级技术经理，负责技术研 发、团队管理与建设。</p>
+                                </div>
+                            </div>
+            </div>
+        </div>
     </mian>
-
-
-
-
-
-
-
 
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
